[package]
name = "fumar"
version = "0.1.0"
edition = "2024"
description = "TUI, CLI, and GUI client for Storz & Bickel vaporizers"
license = "MIT"
repository = "https://github.com/flakesonnix/fumar"
keywords = ["vaporizer", "bluetooth", "ble", "tui", "storz-bickel"]
categories = ["command-line-utilities"]

[[bin]]
name = "fumar"
path = "src/main.rs"

[features]
default = []
gui = ["gtk4"]

[dependencies]
storz-rs = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
btleplug = "0.11"
serde_json = "1"
tokio-stream = "0.1"
async-trait = "0.1"
gtk4 = { version = "0.11", features = ["v4_10"], optional = true }
